# gn-language-server

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml  nightly.yml
scripts/: bump_version.py  generate_builtins.py  is_prerelease.py  release_flags.py
src/: analyze.rs  bench.rs  binary.rs  builtins.rs  client.rs  config.rs  error.rs  indexing.rs  main.rs  parse.rs  server.rs  storage.rs  testutil.rs  util.rs  utils.rs
src/analyze/: base.rs  cache.rs  data.rs  dotgn.rs  full.rs  links.rs  mod.rs  shallow.rs  symbols.rs  tests.rs  utils.rs
src/analyzer/: cache.rs  data.rs  diagnostics.rs  dotgn.rs  full.rs  links.rs  mod.rs  shallow.rs  symbols.rs  tests.rs  toplevel.rs  utils.rs
src/ast/: gn.pest  mod.rs  parser.rs  tests.rs
src/common/: client.rs  config.rs  error.rs  mod.rs  storage.rs  utils.rs  workspace.rs
src/diagnostics/: mod.rs  syntax.rs  undefined.rs
src/parser/: mod.rs  parse.rs
src/providers/: completion.rs  configuration.rs  diagnostics.rs  document.rs  document_link.rs  document_symbol.rs  formatting.rs  goto_definition.rs  hover.rs  indexing.rs  mod.rs  references.rs  utils.rs  workspace_symbol.rs
src/server/: indexing.rs  mod.rs
src/server/providers/: completion.rs  diagnostics.rs  document_link.rs  document_symbol.rs  formatting.rs  goto_definition.rs  hover.rs  references.rs  utils.rs  workspace_symbol.rs
testdata/workspaces/cycles/: bad1.gni  bad2.gni  ok1.gni  ok2.gni
testdata/workspaces/hover/: BUILD.gn
testdata/workspaces/smoke/: .gn  BUILD.gn  BUILDCONFIG.gn
vscode-gn/: .gitignore  .prettierrc.js  .vscode-test.mjs  .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  webpack.config.js
vscode-gn/languages/: gn.language-configuration.json
vscode-gn/src/: extension.ts
vscode-gn/src/test/: extension.test.ts
vscode-gn/syntaxes/: gn.tmLanguage.json
