[package]
name = "gn-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
either = "1.13.0"
fs-err = "3.0.0"
itertools = "0.14.0"
pest = "2.7.15"
pest_derive = "2.7.15"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-lsp = "0.20.0"

[build-dependencies]
cc = "1.2.7"
