[package]
name = "gn-language-server"
description = "A language server for GN, the build configuration language used in Chromium and other projects"
version = "1.3.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/gn-language-server"
exclude = [
    ".github",
    "docs",
    "testdata",
    "vscode-gn",
]

[dependencies]
anyhow = "1.0.95"
either = "1.13.0"
fs-err = "3.0.0"
futures = "0.3.31"
itertools = "0.14.0"
pest = "2.7.15"
pest_derive = "2.7.15"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-lsp = "0.20.0"
walkdir = "2.5.0"
which = "7.0.2"

[build-dependencies]
cc = "1.2.7"
