# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  enable_opt = false
}

static_library("lib") {
  sources = [ "lib.cc" ]
  opt = enable_opt
}

if (is_linux) {
  static_library("lib_linux") {
    sources = [ "lib_linux.cc" ]
    opt = enable_opt
  }
  _lib = ":lib_linux"
} else if (is_win) {
  static_library("lib_win") {
    sources = [ "lib_win.cc" ]
    opt = enable_opt
  }
  _lib = ":lib_win"
} else {
  assert(false, "Unsupported platform")
}

executable("main") {
  sources = [ "main.cc" ]
  deps = [
    ":lib",
    _lib,
  ]
  opt = enable_opt
}
